# Convolver

./: CMakeLists.txt  Convolver.jucer  project.config
Builds/Linux/: Makefile
Builds/MacOSX/: Info.plist
Builds/MacOSX/Convolver.xcodeproj/: project.pbxproj
Builds/VisualStudio2012/: Convolver.sln  Convolver.vcxproj  Convolver.vcxproj.filters  resources.rc
JuceLibraryCode/: AppConfig.h  JuceHeader.h
Source/: FFTWrapper.cpp  FFTWrapper.h  ImpulseResponseLoader.cpp  ImpulseResponseLoader.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source-old-1.x/: Convolver.cpp  Convolver.h  ConvolverEditor.cpp  ConvolverEditor.h  ConvolverMain.cpp  ConvolverProc.cpp  cFileColumn.cpp  cFileColumn.h  filter.cpp
Source-old-2.x/: Convolver2AU.cpp  Convolver2AU.h  Convolver2Core.cpp  Convolver2Core.h  Convolver2Editor.cpp  Convolver2Editor.h  Convolver2VST.cpp  Convolver2VST.h  ConvolverEditorOpen.cpp  cFileColumn.cpp  cFileColumn.h  defaults.h
